--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 * {
     margin: 0px;
@@ -8,7 +8,7 @@
 
 html, body {
     height: 100vh;
-    width: 97vw;
+    width: 100vw;
     background-color: black;
 }
 
@@ -38,7 +38,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
